<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/baseColor"
            />
    </com.google.android.material.appbar.AppBarLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_startAddPlayer"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/newPlayer"
            android:layout_gravity="center"
            android:backgroundTint="@color/baseColor"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="30dp"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/startPlayer1ET"
            android:autofillHints="username"
            android:hint="@string/player1"
            android:layout_marginBottom="50dp"
            android:visibility="invisible"
            android:inputType="text"
        />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/startPlayer2ET"
            android:autofillHints="username"
            android:hint="@string/player2"
            android:layout_marginBottom="110dp"
            android:visibility="invisible"
            android:inputType="text"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_startNewGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newGame"
            android:layout_gravity="center"
            android:backgroundTint="@color/baseColor"
            android:visibility="invisible"
            />
    </LinearLayout>
</LinearLayout>